fix caption wrapping issue

--- a/sites/all/themes/gnam_cases/_assets/_src/scss/skin/_main-content-figures.scss
+++ b/sites/all/themes/gnam_cases/_assets/_src/scss/skin/_main-content-figures.scss
@@ -3,6 +3,7 @@
 		figure {
 			overflow: hidden;
 			margin-bottom: 2rem;
+			display: table;
 
 			&.left {
 				margin-right:  2rem;
